langtools/test/tools/javac/annotations/typeAnnotations/failures/StaticMethods.out
StaticMethods.java:9:37: compiler.err.annotation.type.not.applicable
1 error
